2010-11-25  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	bugfix: RFC2863_IF_MIB::nodeid-hint=ifIndex  did not really work

2010-11-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/CGI.pm (do_process): added extra DB cleaninup

2010-11-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm:
	Added CISCO-WAN-3G-MIB support

2010-11-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoWLC.pm:
	new discovery parameter: CiscoWLC::only-ssid

2010-11-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (buildConfig):
	New selector action: AddTemplates

2010-10-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoWLC.pm: new discovery module

	* NEWS: Release 1.0.9

2010-10-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/CGI.pm: New URL parameter: 'v' is a synonym for 'view'

2010-10-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* templates/html-incblocks.txt: 'cssoverlay' now must point to
	an absolute URL

2010-09-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm (checkdevtype):
	New discovery parameter: CiscoIOS::enable-unrouted-vlan-interfaces

2010-09-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/Jacarta.pm:
	New discovery module for Jacarta iMeter (thanks to Roman Hochuli)

2010-09-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm (initCollectorGlobals):
	Refresh the SNMP maps after a configuration re-compile

2010-08-31  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* performance optimizations: XML compiler runs 15-20% faster 

2010-08-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
